Import data with functions, work on census tracts

--- a/data_summary.Rmd
+++ b/data_summary.Rmd
@@ -25,6 +25,7 @@ library(rmarkdown)
 library(demogztrax)
 library(data.table)
 library(sf)
+library(tigris)
 read_chunk("NFIP_claims_processing.R")
 read_chunk("ztrax_processing.R")
 options(knitr.kable.NA = '')
