--- a/CPJ_floodinsurance.Rmd
+++ b/CPJ_floodinsurance.Rmd
@@ -3,9 +3,13 @@ title: Flood Insurance Impact on Post-Flood Home Sales
 author: Connor P. Jackson
 date: "`r format(Sys.time(), '%B %d, %Y - %H:%M %Z')`"
 output:
-  pdf_document:
+pdf_document:
     fig_caption: yes
     toc: yes
+    number_sections: yes
+    df_print: kable
+  html_notebook:
+    fig_caption: yes
     number_sections: yes
     df_print: kable
   html_document:
@@ -17,10 +21,6 @@ output:
     toc_depth: 2
     toc_float: yes
     df_print: kable
-  html_notebook:
-    fig_caption: yes
-    number_sections: yes
-    df_print: kable
 linestretch:
 fontsize:
 linkcolor: blue
@@ -30,12 +30,49 @@ urlcolor: blue
 ```{r setup, include=FALSE}
 library(knitr)
 library(rmarkdown)
+library(stargazer)
+library(sandwich)
+library(plm)
 options(knitr.kable.NA = '')
 ```
 
 ```{r initialize-data, include=FALSE}
 source("merge_and_analysis.R")
 ```
+
+# Introduction
+
+
+
+# Data
+
+## Flood Insurance Policies and Claims
+
+Summary stats table of policies and claims
+
+Show a graph of the first stage: number (or percentage) of policies by year, adapted vs nonadapted
+
+## Housing Assessment and Transactions
+
+First page footnote: Data provided by Zillow through the Zillow Transaction and Assessment Dataset (ZTRAX). More information on accessing the data can be found at <http://www.zillow.com/ztrax>. The results and opinions are those of the author and do not reflect the position of Zillow Group.
+
+Summary stats table of homes and transactions
+
+Show transaction probability over time (by year and relative to floods), split by adapted and non-adapted
+
+## Constructed Panel
+
+description of panel construction, sample size
+
+# Model
+
+Fixed effects regressions: OLS and IV, 2 vs 3 lag, lead vs no lead. 8 regressions total
+Also include a first stage regression
+Cluster at the census tract level (or at the county level?)
+
+identifying assumptions
+- flood probability is exogenous conditional on census tract, flood zone, adaptation status
+- any time trends in transaction probability are common to adapted and non-adapted homes
 
 Questions of interest:
 
@@ -49,21 +86,70 @@ Coefficients of interest for each question:
 1. `flood_eventTRUE`, `flood_L1TRUE`, `flood_L2TRUE`, `flood_L3TRUE`
 2. `flood_eventTRUE:policy_prob`, `flood_L1TRUE:policy_prob_L1`, `flood_L2TRUE:policy_prob_L2`, `flood_L3TRUE:policy_prob_L3`
 
+Average transaction probability in our sample: 
 
-```{r event-study}
+```{r}
+tzy_panel[in_sample == TRUE, mean(transaction_prob)]
+```
+
+# Results
+
+# Two Lags, no Leads
+
+```{r event-study-2-noF}
+ols_res <- plm(transaction_prob ~ flood_event * policy_prob + flood_L1 * policy_prob_L1
+                                  + flood_L2 * policy_prob_L2
+                                  | flood_event * reg_reform:adapted + flood_L1 * reg_reform_L1:adapted
+                                    + flood_L2 * reg_reform_L2:adapted,
+               data = tzy_panel[in_sample == TRUE], model = "within", index = c("panel_id", "year"), effect = "twoway")
+summary(ols_res, vcov=vcovHC(ols_res, type="HC1", cluster="group"))
+# summary(ols_res)
+```
+
+# Three Lags, No Leads
+
+```{r event-study-3-noF}
 ols_res <- plm(transaction_prob ~ flood_event * policy_prob + flood_L1 * policy_prob_L1
                                   + flood_L2 * policy_prob_L2 + flood_L3 * policy_prob_L3
                                   | flood_event * reg_reform:adapted + flood_L1 * reg_reform_L1:adapted
                                     + flood_L2 * reg_reform_L2:adapted + flood_L3 * reg_reform_L3:adapted,
-               data = tzy_panel[in_sample == TRUE], model = "within", index = c("panel_id", "year"), effect = "twoways")
+               data = tzy_panel[in_sample == TRUE], model = "within", index = c("panel_id", "year"), effect = "twoway")
 summary(ols_res, vcov=vcovHC(ols_res, type="HC1", cluster="group"))
+# summary(ols_res)
+```
+
+# Two Lags, One Lead
+
+```{r event-study-2-F}
+ols_res <- plm(transaction_prob ~ flood_event * policy_prob + flood_L1 * policy_prob_L1
+                                  + flood_L2 * policy_prob_L2 + flood_F1 * policy_prob_F1
+                                  | flood_event * reg_reform:adapted + flood_L1 * reg_reform_L1:adapted
+                                    + flood_L2 * reg_reform_L2:adapted + flood_F1 * reg_reform_F1:adapted,
+               data = tzy_panel[in_sample == TRUE], model = "within", index = c("panel_id", "year"), effect = "twoway")
+summary(ols_res, vcov=vcovHC(ols_res, type="HC1", cluster="group"))
+# summary(ols_res)
+```
+
+# Three Lags, One Lead
+
+```{r event-study-3-F}
+ols_res <- plm(transaction_prob ~ flood_event * policy_prob + flood_L1 * policy_prob_L1
+                                  + flood_L2 * policy_prob_L2 + flood_L3 * policy_prob_L3 + flood_F1 * policy_prob_F1
+                                  | flood_event * reg_reform:adapted + flood_L1 * reg_reform_L1:adapted
+                                    + flood_L2 * reg_reform_L2:adapted + flood_L3 * reg_reform_L3:adapted + flood_F1 * reg_reform_F1:adapted,
+               data = tzy_panel[in_sample == TRUE], model = "within", index = c("panel_id", "year"), effect = "twoway")
+summary(ols_res, vcov=vcovHC(ols_res, type="HC1", cluster="group"))
+# summary(ols_res)
 ```
 
 
 ```{r first-stage}
-# a rough test of the first stage (not the lagged versions)
-testols <- lm(policy_prob ~ flood_event * reg_reform * adapted + year, data = tzy_panel[in_sample == TRUE])
-summary(testols)
+ols_res <- plm(transaction_prob ~ flood_event * policy_prob + flood_L1 * policy_prob_L1
+                                  + flood_L2 * policy_prob_L2 + flood_F1 * policy_prob_F1,
+               data = tzy_panel[in_sample == TRUE], model = "within", index = c("panel_id", "year"), effect = "twoway")
+# summary(ols_res, vcov=vcovHC(ols_res, type="HC1", cluster="group"))
+summary(ols_res)
 ```
 
 
+# Conclusions
